Update JVM config in deployment instructions
Updated the deployment documentation JVM config instructions to reflect
the Java 8 differences (floatingdecimal patch and PermSize parameters).